--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,16 @@ body {
 
 .calculos-box {
   border: 1px solid var(--color-border);
+  padding: 0 30px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#calculos {
+  font-size: 30px;
+  color: var(--color-numbers);
+  font-family: 'Source Code Pro', monospace;
 }
 
 .botoes {
