--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   --color-background: #282a36;
   --color-border: #44475a;
   --color-numbers: #ff79c6;
+  --color-operadores: #8be9fd;
+  --color-calculos: #50fa7b;
 }
 
 * {
@@ -39,7 +41,7 @@ body {
 
 #calculos {
   font-size: 30px;
-  color: var(--color-numbers);
+  color: var(--color-calculos);
   font-family: 'Source Code Pro', monospace;
 }
 
