--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,19 @@ body {
   grid-template-columns: 25% 1fr 1fr 1fr;
   grid-template-rows: 25% 1fr 1fr 1fr;
 }
+
+@media (max-width: 900px) {
+  .calculadora {
+    width: 80vw;
+  }
+}
+
+@media (max-width: 650px) {
+  .calculadora {
+    width: 100vw;
+    height: 100vh;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+  }
+}
